--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Product preview card component</title>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -20,9 +24,11 @@
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.
       </p>
-      <span class="content__price">$149.99</span>
-      <span class="content__price-secondary">$169.99</span>
-      <a href="#">
+      <div class="content__container">
+        <span class="content__price">$149.99</span>
+        <small class="content__price price-secondary">$169.99</small>
+      </div>
+      <a class="content__button" href="#">
         <img src="./images/icon-cart.svg" alt=""> Add to Cart
       </a>
     </div>
@@ -31,7 +37,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Lucas Melo</a>.
   </div>
 </body>
 
